clients/atlas-tui/tests/snapshots/golden_research__the_qualitative_matrix_renders_the_window_at_120x36.snap
---
source: tests/golden_research.rs
expression: "with_window().frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│ vol forecast  IC -0.121  stability -0.424 (unstable)  —  not usable         │▌ PULSE                          "
" 2 DESK │ predictors    no admitted model  vs ridge:none                              │ desk stress  …                  "
" 3 MKTS │▌ LEADERBOARD                                        newest ablation · 4 arms│ regime CALM  robust UNCERTAIN   "
" 4 BOOK │METHOD                         SHARPE     RET   MAXDD  CVAR95   DSR          │ drawdown 0.0%  tier NONE        "
"▌5 RSCH │HRP                      ★       0.84   +7.1%  -11.3%  -1.89%  0.61          │ gross 100.0%                    "
" 6 PRED │Equal weight             BENCH   0.77   +6.8%  -12.6%  -2.03%  0.54          │                                 "
" 7 WORK │MVSK                            -0.12   -0.9%  -24.2%  -3.11%  0.00          │▌ BREADTH                        "
" 8 AUDIT│Scenario CVaR                      --      --      --      --    --          │ ███████████████████████████████ "
" 9 SETT │─────────────────────────────────────────────────────────────────────────────│ adv 1 / dec 4                   "
" 0 VIS  │▌ QUALITATIVE MATRIX                             2026-08-31 · window 9f2c41ab│                                 "
"        │NAME        COVER PUBS CORROB PRIMARY RELEASE                                │▌ MOVERS                         "
"        │ACWI   HELD     7    4      3       1      12                                │ ▲ best  XLF    +1.24%           "
"        │BNDW   HELD     0    0      0       0      --                                │ ▼ worst XLK    -2.08%           "
"        │GLD             3    1      0       0       4                                │                                 "
"        │QQQ            11    6      8       2       1                                │▌ REGIME                         "
"        │SPY            14    9     11       4      21                                │ … waiting for the regime panel  "
"        │XLF             2    1      0       1      --                                │                                 "
"        │─────────────────────────────────────────────────────────────────────────────│                                 "
"        │▌ RUNS                newest first ▌ CATALOG               3 of 6 operational│                                 "
"        │board7c2f9 predictor_b 09:12:03    equal_weight                  OPERATIONAL │                                 "
"        │805e0729cf ablation    17:58:41    hrp                           OPERATIONAL │                                 "
"        │ece2abcefa prediction  16:41:12    scenario_cvar                 OPERATIONAL │                                 "
"        │3f2a91cc70 backtest    22:03:55    mvsk_multistart               RESEARCH    │▌ ATLAS READ                     "
"        │                                   vol_prediction_ridge          RESEARCH    │ state      STRESS               "
"        │                                   qaoa_selection                OFFLINE     │ agreement  ALIGNED              "
"        │                                                                             │ conviction 84.0%                "
"        │                                                                             │ news       alpaca               "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────── ──────────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
