clients/atlas-tui/tests/snapshots/golden_research__the_research_view_renders_its_three_panes_at_120x36.snap
---
source: tests/golden_research.rs
expression: "research().frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 DESK │ vol forecast  IC -0.121  stability -0.424 (unstable)  —  not usable         │▌ PULSE                          "
" 2 MKTS │ predictors    no admitted model  vs ridge:none                              │ desk stress  …                  "
" 3 BOOK │▌ LEADERBOARD                                        newest ablation · 4 arms│ regime CALM  robust UNCERTAIN   "
"▌4 RSCH │METHOD                         SHARPE     RET   MAXDD  CVAR95   DSR          │ drawdown 0.0%  tier NONE        "
" 5 WORK │HRP                      ★       0.84   +7.1%  -11.3%  -1.89%  0.61          │ gross 100.0%                    "
" 6 AUDIT│Equal weight             BENCH   0.77   +6.8%  -12.6%  -2.03%  0.54          │                                 "
" 7 SETT │MVSK                            -0.12   -0.9%  -24.2%  -3.11%  0.00          │▌ BREADTH                        "
"        │Scenario CVaR                      --      --      --      --    --          │ ███████████████████████████████ "
"        │─────────────────────────────────────────────────────────────────────────────│ adv 1 / dec 4                   "
"        │▌ RUNS                newest first ▌ CATALOG               3 of 6 operational│                                 "
"        │board7c2f9 predictor_b 09:12:03    equal_weight                  OPERATIONAL │▌ MOVERS                         "
"        │805e0729cf ablation    17:58:41    hrp                           OPERATIONAL │ ▲ best  XLF    +1.24%           "
"        │ece2abcefa prediction  16:41:12    scenario_cvar                 OPERATIONAL │ ▼ worst XLK    -2.08%           "
"        │3f2a91cc70 backtest    22:03:55    mvsk_multistart               RESEARCH    │                                 "
"        │                                   vol_prediction_ridge          RESEARCH    │▌ REGIME                         "
"        │                                   qaoa_selection                OFFLINE     │ … waiting for the regime panel  "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      STRESS               "
"        │                                                                             │ agreement  ALIGNED              "
"        │                                                                             │ conviction 84.0%                "
"        │                                                                             │ news       alpaca               "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────── ──────────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
